@@ -476,8 +476,12 @@ complex_boolean_queries = (
 # And boost_relevancy
     (lambda q: q.query("blah").boost_relevancy(1.5, int_field=3),
      [('q', u'blah OR (blah AND int_field:3^1.5)')]),
+    (lambda q: q.query("blah").boost_relevancy(1.5, int_field=3).boost_relevancy(2, string_field='def'),
+     [('q', u'blah OR (blah AND (int_field:3^1.5 OR string_field:def^2))')]),
     (lambda q: q.query("blah").query("blah2").boost_relevancy(1.5, int_field=3),
      [('q', u'(blah AND blah2) OR (blah AND blah2 AND int_field:3^1.5)')]),
+    (lambda q: q.query(q.Q("blah") | q.Q("blah2")).boost_relevancy(1.5, int_field=3),
+     [('q', u'blah OR blah2 OR ((blah OR blah2) AND int_field:3^1.5)')]),
 # And ranges
     (lambda q: q.query(int_field__any=True),
      [('q', u'int_field:[* TO *]')]),
